# pylliards

./: .gitignore  flake.nix  pyproject.toml
pylliards/: __init__.py  __main__.py  rendering.py
pylliards/engine/: __init__.py  ball.py  dummy.py  engine.py
pylliards/rendering/: __init__.py  renderer.py
